<resources>
    <string name="app_name">Covid App</string>
    <string name="home_heading"></string>
    <string name="conf_cases">Confirmed Cases</string>
    <string name="active_cases">Active Cases</string>
    <string name="recovered_cases">Recovered Cases</string>
    <string name="dec_cases">Deceased Cases</string>
    <string name="state_wise_cases">See StateWise Cases</string>
    <string name="desc_text">We are providing free food service to the needy from more than 2 years, now during lockdown we are distributing more than 10000 people daily during lockdown</string>
    <string name="title_activity_finding_hotspot">Map</string>
    <string name="style_json">
    [
    {
    \"featureType\": \"all\",
    \"elementType\": \"geometry\",
    \"stylers\": [
    {
    \"color\": \"#242f3e\"
    }
    ]
    },
    {
    \"featureType\": \"all\",
    \"elementType\": \"labels.text.stroke\",
    \"stylers\": [
    {
    \"lightness\": -80
    }
    ]
    },
    {
    \"featureType\": \"administrative\",
    \"elementType\": \"labels.text.fill\",
    \"stylers\": [
    {
    \"color\": \"#746855\"
    }
    ]
    },
    {
    \"featureType\": \"administrative.locality\",
    \"elementType\": \"labels.text.fill\",
    \"stylers\": [
    {
    \"color\": \"#d59563\"
    }
    ]
    },
    {
    \"featureType\": \"poi\",
    \"elementType\": \"labels.text.fill\",
    \"stylers\": [
    {
    \"color\": \"#d59563\"
    }
    ]
    },
    {
    \"featureType\": \"poi.park\",
    \"elementType\": \"geometry\",
    \"stylers\": [
    {
    \"color\": \"#263c3f\"
    }
    ]
    },
    {
    \"featureType\": \"poi.park\",
    \"elementType\": \"labels.text.fill\",
    \"stylers\": [
    {
    \"color\": \"#6b9a76\"
    }
    ]
    },
    {
    \"featureType\": \"road\",
    \"elementType\": \"geometry.fill\",
    \"stylers\": [
    {
    \"color\": \"#2b3544\"
    }
    ]
    },
    {
    \"featureType\": \"road\",
    \"elementType\": \"labels.text.fill\",
    \"stylers\": [
    {
    \"color\": \"#9ca5b3\"
    }
    ]
    },
    {
    \"featureType\": \"road.arterial\",
    \"elementType\": \"geometry.fill\",
    \"stylers\": [
    {
    \"color\": \"#38414e\"
    }
    ]
    },
    {
    \"featureType\": \"road.arterial\",
    \"elementType\": \"geometry.stroke\",
    \"stylers\": [
    {
    \"color\": \"#212a37\"
    }
    ]
    },
    {
    \"featureType\": \"road.highway\",
    \"elementType\": \"geometry.fill\",
    \"stylers\": [
    {
    \"color\": \"#746855\"
    }
    ]
    },
    {
    \"featureType\": \"road.highway\",
    \"elementType\": \"geometry.stroke\",
    \"stylers\": [
    {
    \"color\": \"#1f2835\"
    }
    ]
    },
    {
    \"featureType\": \"road.highway\",
    \"elementType\": \"labels.text.fill\",
    \"stylers\": [
    {
    \"color\": \"#f3d19c\"
    }
    ]
    },
    {
    \"featureType\": \"road.local\",
    \"elementType\": \"geometry.fill\",
    \"stylers\": [
    {
    \"color\": \"#38414e\"
    }
    ]
    },
    {
    \"featureType\": \"road.local\",
    \"elementType\": \"geometry.stroke\",
    \"stylers\": [
    {
    \"color\": \"#212a37\"
    }
    ]
    },
    {
    \"featureType\": \"transit\",
    \"elementType\": \"geometry\",
    \"stylers\": [
    {
    \"color\": \"#2f3948\"
    }
    ]
    },
    {
    \"featureType\": \"transit.station\",
    \"elementType\": \"labels.text.fill\",
    \"stylers\": [
    {
    \"color\": \"#d59563\"
    }
    ]
    },
    {
    \"featureType\": \"water\",
    \"elementType\": \"geometry\",
    \"stylers\": [
    {
    \"color\": \"#17263c\"
    }
    ]
    },
    {
    \"featureType\": \"water\",
    \"elementType\": \"labels.text.fill\",
    \"stylers\": [
    {
    \"color\": \"#515c6d\"
    }
    ]
    },
    {
    \"featureType\": \"water\",
    \"elementType\": \"labels.text.stroke\",
    \"stylers\": [
    {
    \"lightness\": -20
    }
    ]
    }
        ]</string>


</resources>

