<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="homeviewmodel"
            type="com.aossie.covidapp.ui.home.HomeViewModel" />

    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeActivity"
        android:fitsSystemWindows="true"
        tools:openDrawer="start"
        android:id="@+id/drawer_layout_home"
        >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    >

    <ImageView
        android:layout_width="35dp"
        android:layout_height="40dp"
        android:id="@+id/drawerOpener"
        android:clickable="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_menu_black_24dp"
        android:focusable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Covid 19 India Tracker"
        app:fontFamily="cursive"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="27sp"
        android:id="@+id/headerTextHome"
        android:layout_marginEnd="30dp"
        android:layout_below="@id/drawerOpener"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal"
                android:background="@color/totalCasesColor"
                android:gravity="center_horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:text="@string/conf_cases"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginStart="10dp"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/confirmedCasesHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="15sp"

                        />

                    <TextView
                        android:id="@+id/confirmedCasesAddHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="(0)"
                        android:textColor="@color/white"
                        android:textSize="10sp" />

                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal"
                android:background="@color/activeCasesColor"
                android:gravity="center_horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/active_cases"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginStart="10dp"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginEnd="30dp"
                    android:gravity="end"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    >
                    <TextView
                        android:id="@+id/activeCasesHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center_horizontal"
                        />
                    <TextView
                        android:id="@+id/activeCasesAddHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(0)"
                        android:textSize="10sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center_horizontal"
                        />

                </LinearLayout>



            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal"
                android:background="@color/recoveredColor"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:text="@string/recovered_cases"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginStart="10dp"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginEnd="30dp"
                    android:gravity="end"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    >
                    <TextView
                        android:id="@+id/recoveredCasesHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center_horizontal"
                        />
                    <TextView
                        android:id="@+id/recoveredCasesAddHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(0)"
                        android:textSize="10sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center_horizontal"
                        />

                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal"
                android:background="@color/deathColor"
                android:gravity="center_horizontal|center_vertical"
                >
                <TextView
                    android:id="@+id/total_elections"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dec_cases"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginStart="10dp"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginEnd="30dp"
                    android:gravity="end"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:id="@+id/deceasedCasesHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center_horizontal"
                        />
                    <TextView
                        android:id="@+id/deceasedCasesAddHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(0)"
                        android:textSize="10sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center_horizontal"
                        />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/state_wise_cases"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:onClick="@{homeviewmodel::onStateButtonClick}"
        />



</RelativeLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/nav_header_main"
            app:menu="@menu/home_drawer"
            app:theme="@style/NavigationDrawerStyle" />


    </androidx.drawerlayout.widget.DrawerLayout>

</layout>